Added loop to create 5 rounds of the game - Do/while loop to keep play going until player or computer scores 5 - Refactored code to make DRY

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-
+  <h1>Rock, Paper, Scissors Game</h1>
+  <p>To play the game, please go into the developer tools and go to the console. Refresh the page to restart the game.
+  </p>
 </body>
 
 </html>
